--- a/lab1_styles.css
+++ b/lab1_styles.css
@@ -6,11 +6,15 @@ body {
     font-size: 36pt;
     font-family: sans-serif;
     height: 60px;
+    padding: 10px ;
+    border: 1px solid gray;
+
 }
 
 .container {
     position: relative;
     height: 500px;
+    padding: 15px 10px;
 }
 
 .sidebar {
@@ -26,4 +30,7 @@ body {
     position: absolute;
     top: 0;
     left: 200px;
+    border: 5px solid blue
+    margin: 5px;
+    padding: 0px 15px 10px;
 }
